--- a/src/TODO
+++ b/src/TODO
@@ -26,3 +26,27 @@ FEATURES:
 libs:
 
 - tanstack table ????
+
+finished trees
+trees needed today
+trees needed this month
+tree debt
+trees by week
+
+pay so far / pay above 25
+
+reported amount
+planned amount
+corrected amount
+predicted pay by reported / pay above 25
+predicted pay by corrected / pay above 25
+predicted pay by planned / pay above 25
+
+goal amount / hr
+avg per day
+
+avg per hour ((?))
+current hrs ((?))
+
+TABLE:
+day, amount per day, planned amount that day
